RESOLVED FIXED 123247
[ARM]Fix CPU(ARM_TRADITIONAL) build after r157690.
https://bugs.webkit.org/show_bug.cgi?id=123247
Summary [ARM]Fix CPU(ARM_TRADITIONAL) build after r157690.
ChangSeok Oh
Reported 2013-10-23 22:34:36 PDT
Build break with ARM compiler. ../../Source/JavaScriptCore/assembler/ARMAssembler.cpp: In member function 'WTF::PassRefPtr<WTF::MetaAllocatorHandle> JSC::ARMAssembler::executableCopy(JSC::VM&, void*, JSC::JITCompilationEffort)': ../../Source/JavaScriptCore/assembler/ARMAssembler.cpp:401:54: error: 'JSC::ARMAssembler::ARMBuffer' has no member named 'executableCopy'
Attachments
Patch (3.30 KB, patch)
2013-10-24 00:47 PDT, Csaba Osztrogonác
no flags
Fix CPU(ARM_TRADITIONAL) build after r157690. (3.45 KB, patch)
2013-10-28 15:58 PDT, Julien Brianceau
no flags
(better) Fix CPU(ARM_TRADITIONAL) build after r157690 (3.42 KB, patch)
2013-10-29 01:51 PDT, Julien Brianceau
msaboff: review+
Fix CPU(ARM_TRADITIONAL) build after r157690 (with more verbose ChangeLog) (4.05 KB, patch)
2013-10-29 10:43 PDT, Julien Brianceau
no flags
Csaba Osztrogonác
Comment 1 2013-10-24 00:47:24 PDT
Created attachment 215034 [details] Patch After r157690 JSC::ARMAssembler::executableCopy became unreachable function and now causes build failure due to calling the non-existent JSC::ARMAssembler::ARMBuffer in it.
Csaba Osztrogonác
Comment 2 2013-10-24 06:02:40 PDT
Comment on attachment 215034 [details] Patch It isn't the proper fix. (after discussing with Julien Brianceau)
Julien Brianceau
Comment 3 2013-10-24 10:32:20 PDT
I think it will take a little time to have a proper fix, so if you want to fix the build, perhaps you could just #if 0 the code instead of removing it ? It will help to reuse the code in the future "proper" patch.
Julien Brianceau
Comment 4 2013-10-28 15:58:29 PDT
Created attachment 215340 [details] Fix CPU(ARM_TRADITIONAL) build after r157690.
Julien Brianceau
Comment 5 2013-10-29 01:51:41 PDT
Created attachment 215371 [details] (better) Fix CPU(ARM_TRADITIONAL) build after r157690 Same patch without a useless parameter "from" for prepareExecutableCopy
Michael Saboff
Comment 6 2013-10-29 10:24:41 PDT
Comment on attachment 215371 [details] (better) Fix CPU(ARM_TRADITIONAL) build after r157690 View in context: https://bugs.webkit.org/attachment.cgi?id=215371&action=review r=me with addition of ChangeLog comments. > Source/JavaScriptCore/ChangeLog:7 > + Add a comment as to what you did.
Julien Brianceau
Comment 7 2013-10-29 10:43:04 PDT
Created attachment 215397 [details] Fix CPU(ARM_TRADITIONAL) build after r157690 (with more verbose ChangeLog)
WebKit Commit Bot
Comment 8 2013-10-29 12:01:00 PDT
Comment on attachment 215397 [details] Fix CPU(ARM_TRADITIONAL) build after r157690 (with more verbose ChangeLog) Clearing flags on attachment: 215397 Committed r158205: <http://trac.webkit.org/changeset/158205>
WebKit Commit Bot
Comment 9 2013-10-29 12:01:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.